--- a/package.json
+++ b/package.json
@@ -1,21 +1,59 @@
 {
   "name": "local_app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo-google-fonts/outfit": "^0.4.3",
+    "@expo-google-fonts/space-grotesk": "^0.4.1",
+    "@gorhom/bottom-sheet": "^5.2.8",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/slider": "^5.1.1",
+    "@rnmapbox/maps": "^10.2.10",
+    "@supabase/supabase-js": "^2.89.0",
+    "@turf/circle": "^7.3.1",
+    "@turf/distance": "^7.3.1",
+    "@turf/helpers": "^7.3.1",
+    "@types/supercluster": "^7.1.3",
+    "axios": "^1.13.2",
     "expo": "~54.0.29",
+    "expo-auth-session": "~7.0.10",
+    "expo-blur": "^15.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
+    "expo-router": "~6.0.19",
+    "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
+    "lucide-react-native": "^0.561.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-worklets": "^0.7.1",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.8",
     "typescript": "~5.9.2"
   },
   "private": true
